--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="./assets/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-  <title>Jabar Traditional Food</title>
+  <title>Jabar TradiFood</title>
   <style>
     body {
       background: url('./assets/img/Background/Background.jpg');
@@ -59,11 +59,6 @@
           <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
             <span class="bi bi-person-circle" style="color: #101010; font-size:28px"></span>
           </a>
-          <!-- <ul class="dropdown-menu text-small" style="color: #101010; font-size:12px">
-            <li><a class="dropdown-item" href="#">User</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Admin</a></li>
-          </ul> -->
         </div>
       </div>
     </div>
