--- a/menu_makanan_login_user.html
+++ b/menu_makanan_login_user.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="./assets/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-  <title>Jabar Traditional Food</title>
+  <title>Jabar TradiFood</title>
   <style>
     body {
       background: url('./assets/img/Background/Background.jpg');
