--- a/profil_user.html
+++ b/profil_user.html
@@ -62,118 +62,48 @@
 </nav>
 <!-- Navigasi End -->
 
-<!-- Breadcrumbs End --> 
-<div class="container">
-  <hr class="border border-2 border-light opacity-50 m-0" style="border-color: #D3AC48 !important;">
-    <div class="row mt-3 mb-4">
-      <div class="col-12">
-
-        <div class="d-flex justify-content-center align-items-center pb-2">
-          <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
-            <ol class="breadcrumb text-decoration-none fw-semibold">
-              <li class="breadcrumb-item active" aria-current="page">Keranjang Belanja</li>
-              <li class="breadcrumb-item"><a href="#" style="text-decoration: none; color: #D3AC48;">Keranjang Belanja</a></li>
-              <li class="breadcrumb-item active" aria-current="page">Pesanan</li>
-            </ol>
-          </nav>
-        </div>
-
-      </div>
-    </div>
-</div>
-<!-- Breadcrumbs Start -->
-
 <!-- Judul Start --> 
 <div class="container">
-  <div class="row">
+  <div class="row mt-3">
       <div class="col-12">
       <div class="d-flex justify-content-between align-items-center pb-2">
-        <span class="text-dark fw-semibold text-decoration-none h5">Buat Pesanan</span>
+        <span class="text-dark fw-semibold text-decoration-none h5">Riwayat Transaksi</span>
       </div>
     </div>
   </div>
 </div>
 <!-- Judul End -->
 
-<!-- Input Form Start -->
+<!-- Tabel Start -->
 <div class="container">
-  <div class="row">
-    <div class="col-10">
-      <form>
-        <div class="form-group row">
-          <label for="inputNamaPenerima" class="col-md-2 col-form-label">Nama Penerima :</label>
-          <div class="col-md-4 pb-3">
-            <input type="text" class="form-control" id="inputNamaPenerima" placeholder="Masukan Nama">
-          </div>
+    <div class="row" style="padding-bottom: 330px;">
+        <div class="col-12">
+            <table class="table">
+                <thead>
+                  <tr>
+                    <th scope="col">No</th>
+                    <th scope="col">Jenis Pesanan</th>
+                    <th scope="col">Jumlah</th>
+                    <th scope="col">Status Pembayaran</th>
+                    <th scope="col">Jumlah Pembayaran</th>
+                    <th scope="col">Status</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <th scope="row">1</th>
+                    <td>Cumi Goreng Tepung</td>
+                    <td>5</td>
+                    <td>Dibayar</td>
+                    <td>Rp.20.000</td>
+                    <td>Selesai</td>
+                  </tr>
+                </tbody>
+              </table>
         </div>
-        <div class="form-group row">
-          <label for="inputNomorTelepon" class="col-md-2 col-form-label">Nomor Telepon :</label>
-          <div class="col-md-4 pb-3">
-            <input type="text" class="form-control" id="inputNomorTelepon" placeholder="Masukan Nomor Telepon">
-          </div>
-        </div>
-        <div class="form-group row">
-          <label for="inputAlamatLengkap" class="col-md-2 col-form-label">Alamat Lengkap :</label>
-          <div class="col-md-4 pb-3">
-            <textarea type="text" class="form-control" id="inputAlamatLengkap" placeholder="Masukan Alamat Lengkap"></textarea>
-          </div>
-        </div>
-        <div class="form-group row">
-          <label for="inlineFormCustomSelectPref" class="col-md-2 col-form-label">Tujuan :</label>
-          <div class="col-md-4 pb-3">
-            <select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref">
-              <option selected>Plih Tujuan</option>
-              <option value="1">Bandung</option>
-              <option value="2">Subang</option>
-              <option value="3">Sumedang</option>
-              <option value="3">Cianjur</option>
-              <option value="3">Bogor</option>
-            </select>
-          </div>
-        </div>
-        <fieldset class="form-group">
-          <div class="row">
-            <legend class="col-form-label col-md-2 pt-0">Toko Cabang</legend>
-            <div class="col-md-8 pb-3">
-              <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
-                <label class="form-check-label" for="inlineRadio1">Bandung</label>
-              </div>
-              <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
-                <label class="form-check-label" for="inlineRadio2">Subang</label>
-              </div>
-              <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
-                <label class="form-check-label" for="inlineRadio2">Sumedang</label>
-              </div>
-              <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
-                <label class="form-check-label" for="inlineRadio2">Cianjur</label>
-              </div>
-              <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
-                <label class="form-check-label" for="inlineRadio2">Bogor</label>
-              </div>
-            </div>
-          </div>
-        </fieldset>
-        <div class="form-group row">
-          <label for="inputTotalItem" class="col-md-2 col-form-label">Total Item :</label>
-          <div class="col-md-4 pb-3">
-            <input type="text" class="form-control" id="inputTotalItem" placeholder="Total Item + Jasa Antar">
-          </div>
-        </div>
-        <div class="form-group row">
-          <div class="col-md-4 pb-3">
-            <button type="submit" class="btn btn-primary" style="background-color: #D3AC48; border-color: #D3AC48;">Buat Pesanan</button>
-          </div>
-        </div>
-      </form>
     </div>
-  </div>
 </div>
-<!-- Input Form End -->
+<!-- Tabel Form End -->
 
 <!-- Footer Start -->
 <footer class="d-flex flex-wrap justify-content-between align-items-center pb-4 pt-4 border-top bg-light">
